图标库更新；控件同步

--- a/vue/1.platform.icon/package.json
+++ b/vue/1.platform.icon/package.json
@@ -4,6 +4,12 @@
   "description": "natasha-icon widget",
   "author": "author",
   "private": false,
+  "files": [
+    "style.css",
+    "fonts"
+  ],
+  "dependencies": {},
+  "devDependencies": {},
   "engines": {
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
