--- a/vue/1.platform.devPanel/package.json
+++ b/vue/1.platform.devPanel/package.json
@@ -1,9 +1,17 @@
 {
   "name": "natasha-devpanel",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "natasha-devpanel widget",
   "author": "author",
   "private": false,
+  "files": [
+    "css",
+    "js"
+  ],
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "svg.js": "^2.6.3"
+  },
   "engines": {
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
