--- a/vue/1.platform.devPanelEx/package.json
+++ b/vue/1.platform.devPanelEx/package.json
@@ -1,9 +1,20 @@
 {
   "name": "natasha-devpanelex",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "natasha-devpanelex widget",
   "author": "Author",
   "private": false,
+  "files": [
+    "css",
+    "js",
+    "image"
+  ],
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "svg.js": "^2.6.3",
+    "html2canvas": "^1.0.0-alpha.12",
+    "save-svg-as-png": "^1.2.0"
+  },
   "engines": {
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
