--- a/vue/1.platform.devPanel/package.json
+++ b/vue/1.platform.devPanel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "natasha-devpanel",
-  "version": "1.0.9",
+  "version": "1.0.11",
   "description": "natasha-devpanel widget",
   "author": "author",
   "private": false,
@@ -10,7 +10,7 @@
   ],
   "dependencies": {
     "jquery": "^3.2.1",
-    "svg.js": "^2.6.3"
+    "svg.js": "2.6.3"
   },
   "engines": {
     "node": ">= 6.0.0",
