--- a/vue/1.platform.gis/package.json
+++ b/vue/1.platform.gis/package.json
@@ -1,9 +1,22 @@
 {
   "name": "natasha-gis",
-  "version": "1.0.8",
+  "version": "1.0.10",
   "description": "natasha-gis widget",
   "author": "author",
   "private": false,
+  "dependencies": {
+    "leaflet.heat": "0.2.0",
+    "@skyraptor/leaflet.pm": "2.1.1",
+    "leaflet-polylinedecorator": "1.4.1",
+    "leaflet.polylinemeasure": "2.0.0",
+    "leaflet-easyprint": "2.1.8",
+    "leaflet-deepzoom": "2.0.0",
+
+    "leaflet": "1.2.0",
+
+    "keyboardjs": "2.3.3",
+    "jquery": "^3.2.1"
+  },
   "engines": {
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
