--- a/vue/1.platform.demo/package.json
+++ b/vue/1.platform.demo/package.json
@@ -27,7 +27,7 @@
 
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "jquery": "^3.2.1",
+    "jquery": "3.4.1",
 
     "natasha-vue": "^1.0.47",
     "babel-polyfill": "^6.26.0"
