--- a/vue/1.platform.devPanelEx/package.json
+++ b/vue/1.platform.devPanelEx/package.json
@@ -10,7 +10,7 @@
     "image"
   ],
   "dependencies": {
-    "jquery": "^3.2.1",
+    "jquery": "3.4.1",
     "svg.js": "2.6.3",
     "html2canvas": "1.0.0-alpha.12",
     "save-svg-as-png": "1.2.0"
