--- a/vue/1.platform.gis/package.json
+++ b/vue/1.platform.gis/package.json
@@ -20,7 +20,7 @@
     "leaflet": "1.2.0",
 
     "keyboardjs": "2.3.3",
-    "jquery": "^3.2.1"
+    "jquery": "3.4.1"
   },
   "engines": {
     "node": ">= 6.0.0",
