--- a/vue/1.platform.topo/package.json
+++ b/vue/1.platform.topo/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "konva": "1.7.6",
     "keyboardjs": "2.3.3",
-    "jquery": "^3.2.1"
+    "jquery": "3.4.1"
   },
   "engines": {
     "node": ">= 6.0.0",
