--- a/vue/1.platform/package.json
+++ b/vue/1.platform/package.json
@@ -19,9 +19,9 @@
     "vue-resource": "^1.3.4",
     "vuex": "^2.3.1",
 
-    "d3": "^3.5.17",
-    "echarts": "^4.1.0",
-    "jsdifflib": "^1.1.0",
+    "d3": "3.5.17",
+    "echarts": "4.1.0",
+    "jsdifflib": "1.1.0",
 
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
