--- a/vue/1.platform.topoarbor/package.json
+++ b/vue/1.platform.topoarbor/package.json
@@ -1,9 +1,13 @@
 {
   "name": "natasha-topoarbor",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "natasha-topoarbor widget",
   "author": "author",
   "private": false,
+  "dependencies": {
+    "sigma": "1.2.0",
+    "jquery": "3.4.1"
+  },
   "engines": {
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
