--- a/vue/1.platform/package.json
+++ b/vue/1.platform/package.json
@@ -1,6 +1,6 @@
 {
   "name": "natasha-vue",
-  "version": "1.0.47",
+  "version": "1.1.2",
   "description": "natasha-vue",
   "author": "Author",
   "private": false,
@@ -20,7 +20,7 @@
     "vuex": "^2.3.1",
 
     "d3": "3.5.17",
-    "echarts": "4.1.0",
+    "echarts": "4.2.1",
     "jsdifflib": "1.1.0",
 
     "lodash": "^4.17.4",
@@ -28,12 +28,12 @@
     "jquery": "3.4.1",
 
     "ace-builds": "1.4.1",
-    "natasha-devpanel": "^1.0.11",
-    "natasha-devpanelex": "^1.0.10",
-    "natasha-gis": "^1.0.12",
-    "natasha-icon": "^1.0.12",
-    "natasha-fui": "^1.0.2",
-    "natasha-topo": "^1.0.9"
+    "natasha-devpanel": "1.1.0",
+    "natasha-devpanelex": "1.1.0",
+    "natasha-gis": "1.1.0",
+    "natasha-icon": "1.1.0",
+    "natasha-fui": "1.1.0",
+    "natasha-topo": "1.1.0"
   },
   "devDependencies": {},
   "engines": {
