--- a/vue/1.platform/package.json
+++ b/vue/1.platform/package.json
@@ -1,6 +1,6 @@
 {
   "name": "natasha-vue",
-  "version": "1.1.2",
+  "version": "1.1.6",
   "description": "natasha-vue",
   "author": "Author",
   "private": false,
@@ -11,23 +11,19 @@
   "scripts": {
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vue-dom-portal": "^0.1.6",
-    "vue-i18n": "^8.0.0",
-    "@kazupon/vue-i18n-loader": "^0.3.0",
-    "vue-resource": "^1.3.4",
-    "vuex": "^2.3.1",
-
-    "d3": "3.5.17",
-    "echarts": "4.2.1",
-    "jsdifflib": "1.1.0",
-
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
+    "vue": "^2.6.6",
+    "vue-dom-portal": "0.1.4",
+    "vue-i18n": "8.15.0",
+    "vue-resource": "1.5.1",
+    "lodash": "4.17.15",
+    "moment": "2.24.0",
     "jquery": "3.4.1",
 
+    "d3": "^3.5.17",
+    "echarts": "4.2.1",
+    "jsdifflib": "^1.1.0",
     "ace-builds": "1.4.1",
+
     "natasha-devpanel": "1.1.0",
     "natasha-devpanelex": "1.1.0",
     "natasha-gis": "1.1.0",
