--- a/vue/1.platform.demo/package.json
+++ b/vue/1.platform.demo/package.json
@@ -17,19 +17,17 @@
     "jsdoc": "node_modules/.bin/jsdoc -c jsdoc.json"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vue-dom-portal": "^0.1.6",
-    "vue-i18n": "^8.0.0",
-    "@kazupon/vue-i18n-loader": "^0.3.0",
-    "vue-resource": "^1.3.4",
-    "vuex": "^2.3.1",
-
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
+    "vue": "^2.6.6",
+    "vue-router": "3.0.6",
+    "vue-dom-portal": "0.1.4",
+    "vue-i18n": "8.15.0",
+    "@kazupon/vue-i18n-loader": "0.4.1",
+    "vue-resource": "1.5.1",
+    "vuex": "3.1.1",
+    "lodash": "4.17.15",
+    "moment": "2.24.0",
     "jquery": "3.4.1",
-
-    "natasha-vue": "^1.0.47",
+    "natasha-vue": "1.1.12",
     "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
