--- a/vue/1.platform.demo/package.json
+++ b/vue/1.platform.demo/package.json
@@ -17,23 +17,21 @@
     "jsdoc": "node_modules/.bin/jsdoc -c jsdoc.json"
   },
   "dependencies": {
-    "vue": "^2.6.6",
+    "vue": "2.6.6",
     "vue-router": "3.0.6",
-    "vue-dom-portal": "0.1.4",
+    "vue-dom-portal": "0.1.6",
     "vue-i18n": "8.15.0",
-    "@kazupon/vue-i18n-loader": "0.4.1",
     "vue-resource": "1.5.1",
     "vuex": "3.1.1",
     "lodash": "4.17.15",
     "moment": "2.24.0",
     "jquery": "3.4.1",
-    "natasha-vue": "1.1.12",
-    "babel-polyfill": "^6.26.0"
+    "natasha-vue": "1.1.17"
   },
   "devDependencies": {
+    "@kazupon/vue-i18n-loader": "0.4.1",
     "jsdoc": "^3.6.2",
     "jsdoc-vue-component": "^2.2.4",
-
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -41,6 +39,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
@@ -66,10 +65,10 @@
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "2.6.6",
     "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-dev-server": "^3.9.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
