--- a/vue/1.platform.devPanel/package.json
+++ b/vue/1.platform.devPanel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "natasha-devpanel",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "natasha-devpanel widget",
   "author": "author",
   "private": false,
@@ -10,7 +10,7 @@
   ],
   "dependencies": {
     "jquery": "3.4.1",
-    "svg.js": "2.6.3"
+    "@svgdotjs/svg.js": "3.0.16"
   },
   "engines": {
     "node": ">= 6.0.0",
