--- a/vue/1.platform/package.json
+++ b/vue/1.platform/package.json
@@ -1,6 +1,6 @@
 {
   "name": "natasha-vue",
-  "version": "1.1.12",
+  "version": "1.1.17",
   "description": "natasha-vue",
   "author": "Author",
   "private": false,
@@ -11,8 +11,8 @@
   "scripts": {
   },
   "dependencies": {
-    "vue": "^2.6.6",
-    "vue-dom-portal": "0.1.4",
+    "vue": "2.6.6",
+    "vue-dom-portal": "0.1.6",
     "vue-i18n": "8.15.0",
     "vue-resource": "1.5.1",
     "lodash": "4.17.15",
@@ -24,8 +24,8 @@
     "jsdifflib": "^1.1.0",
     "ace-builds": "1.4.1",
 
-    "natasha-devpanel": "1.1.1",
-    "natasha-devpanelex": "1.1.0",
+    "natasha-devpanel": "1.1.2",
+    "natasha-devpanelex": "1.1.2",
     "natasha-gis": "1.1.0",
     "natasha-icon": "1.1.0",
     "natasha-fui": "1.1.0",
