--- a/vue/1.platform.devPanel/package.json
+++ b/vue/1.platform.devPanel/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "natasha-devpanel",
-  "version": "1.1.2",
+  "name": "natasha-devpanel-ex",
+  "version": "1.1.3",
   "description": "natasha-devpanel widget",
   "author": "author",
   "private": false,
