--- a/vue/1.platform.devPanelEx/package.json
+++ b/vue/1.platform.devPanelEx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "natasha-devpanelex",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "natasha-devpanelex widget",
   "author": "Author",
   "private": false,
@@ -10,10 +10,10 @@
     "image"
   ],
   "dependencies": {
-    "@svgdotjs/svg.js": "^3.0.16",
-    "html2canvas": "1.0.0-rc.3",
     "jquery": "3.4.1",
-    "save-svg-as-png": "1.4.5",
+    "@svgdotjs/svg.js": "3.0.16",
+    "html2canvas": "1.0.0-rc.3",
+    "save-svg-as-png": "1.4.5"
   },
   "engines": {
     "node": ">= 6.0.0",
